src/test/ui/resolve/issue-2356.stderr
error[E0425]: cannot find function `shave` in this scope
  --> $DIR/issue-2356.rs:27:5
   |
27 |     shave();
   |     ^^^^^ not found in this scope

error[E0425]: cannot find function `clone` in this scope
  --> $DIR/issue-2356.rs:35:5
   |
35 |     clone();
   |     ^^^^^ did you mean `self.clone(...)`?

error[E0425]: cannot find function `default` in this scope
  --> $DIR/issue-2356.rs:43:5
   |
43 |     default();
   |     ^^^^^^^ did you mean `Self::default`?

error[E0425]: cannot find value `whiskers` in this scope
  --> $DIR/issue-2356.rs:52:5
   |
52 |     whiskers -= other;
   |     ^^^^^^^^
   |     |
   |     did you mean `self.whiskers`?
   |     `self` value is only available in methods with `self` parameter

error[E0425]: cannot find function `shave` in this scope
  --> $DIR/issue-2356.rs:57:5
   |
57 |     shave(4);
   |     ^^^^^ did you mean `Self::shave`?

error[E0425]: cannot find function `purr` in this scope
  --> $DIR/issue-2356.rs:60:5
   |
60 |     purr();
   |     ^^^^ not found in this scope

error[E0425]: cannot find function `static_method` in this scope
  --> $DIR/issue-2356.rs:70:9
   |
70 |         static_method();
   |         ^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find function `purr` in this scope
  --> $DIR/issue-2356.rs:73:9
   |
73 |         purr();
   |         ^^^^ not found in this scope

error[E0425]: cannot find function `purr` in this scope
  --> $DIR/issue-2356.rs:76:9
   |
76 |         purr();
   |         ^^^^ not found in this scope

error[E0425]: cannot find function `purr` in this scope
  --> $DIR/issue-2356.rs:79:9
   |
79 |         purr();
   |         ^^^^ not found in this scope

error[E0424]: expected value, found module `self`
  --> $DIR/issue-2356.rs:87:8
   |
87 |     if self.whiskers > 3 {
   |        ^^^^ `self` value is only available in methods with `self` parameter

error[E0425]: cannot find function `grow_older` in this scope
  --> $DIR/issue-2356.rs:95:5
   |
95 |     grow_older();
   |     ^^^^^^^^^^ not found in this scope

error[E0425]: cannot find function `shave` in this scope
  --> $DIR/issue-2356.rs:98:5
   |
98 |     shave();
   |     ^^^^^ not found in this scope

error[E0425]: cannot find value `whiskers` in this scope
   --> $DIR/issue-2356.rs:104:5
    |
104 |     whiskers = 0;
    |     ^^^^^^^^ did you mean `self.whiskers`?

error[E0425]: cannot find value `whiskers` in this scope
   --> $DIR/issue-2356.rs:110:5
    |
110 |     whiskers = 4;
    |     ^^^^^^^^
    |     |
    |     did you mean `self.whiskers`?
    |     `self` value is only available in methods with `self` parameter

error[E0425]: cannot find function `purr_louder` in this scope
   --> $DIR/issue-2356.rs:115:5
    |
115 |     purr_louder();
    |     ^^^^^^^^^^^ not found in this scope

error[E0424]: expected value, found module `self`
   --> $DIR/issue-2356.rs:122:5
    |
122 |     self += 1;
    |     ^^^^ `self` value is only available in methods with `self` parameter

error: aborting due to 17 previous errors

